--- a/main.html
+++ b/main.html
@@ -1,103 +1,18 @@
 <!DOCTYPE html>
 
-<html>
+<html lang='en'>
   <header>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   </header>
 
     <style type="text/css">
-        body{
-            background-color: pink;
-            position: relative;
-            bottom: 100px;
-        }
-
-        #translator{
-            position: relative;
-            left: 350px;
-            top: 100px;
-            font-family: monospace;
-            font-size: 50px;
-        }
-        form{
-            position: relative;
-            right: 150px;
-            padding-top: 25px;
-        }
-
-        #pigPic{
-            position: relative;
-            left: 520px;
-            top: 100px;
-        }
-
-        #press{
-            position: relative;
-            left: 242px;
-            bottom: 140px;
-        }
-
-        #selectTrans{
-            margin-top: 20px;
-            font-size: 15px;
-            position: relative;
-            left: 170px;
-        }
-
-        .instructions{
-            font-size: 20px;
-
-        }
-
-        #rightInstruct{
-            position: relative;
-            left: 500px;
-        }
-
-        #leftInstruct{
-            position: relative;
-            top: 40px;
-        }
 
 
     </style>
 
 
     <body>
-        <img id ="pigPic"src= "9iRnz6nie.png" width="200px"/>
-        <div id="translator">
-
-        Pig-Latin Translator.
-            <br />
-            <div id="selectTrans">
-            <input type="radio" id="input1" name="translationType" value="0"/>Text -> Pig-Latin <br />
-            <input type="radio" id="input2" name="translationType" value="1"/> Pig-Latin -> Text
-            </div>
-
-
-
-            <p class="instructions" id="leftInstruct">To Be Translated</p>
-            <p class="instructions" id="rightInstruct">Translated</p>
-
-
-              <form>
-            <textarea style="margin-right: 80px" id="enter" rows="10" cols="50">
-
-            </textarea>
-
-            <textarea id="exit" rows="10" cols="50">
-
-
-            </textarea>
-            </form>
-
-            <button id="press" type="button" onclick="runMe();">Translate</button>
-        </div>
-        <br />
+    
 
     </body>
 
