--- a/main.html
+++ b/main.html
@@ -1,23 +1,60 @@
 <!DOCTYPE html>
 
 <html lang='en'>
-  <header>
+<meta charset="utf-8">
+<style type="text/css">
+html{
+ background-color: #FEDCD2;
 
-  </header>
+}
+body{
 
-    <style type="text/css">
+}
+.main{
+ background-color: #FEDCD2;
+margin-top: 5%;
+font-family: 'Baloo Paaji', cursive;
+}
+.translateButton{
+  margin-top: 2%;
+  margin-top: 1%;
+  margin-left: 1%;
+}
 
 
-    </style>
+</style>
+ <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+ <title>Pig-Latin Translator</title>
+<link href="https://fonts.googleapis.com/css?family=Baloo+Paaji" rel="stylesheet">
+ <!-- Bootstrap -->
+ <link href="css/bootstrap.min.css" rel="stylesheet">
 
+ <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+ <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+ <!--[if lt IE 9]>
+   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+ <![endif]-->
+</head>
+<body class="container text-center main">
+<img src="9iRnz6nie.png" width="20%" height="20%"/>
+ <h1>Pig-Latin Translator</h1>
 
-    <body>
-    
+ <textarea style="font-size: 2em;" class="form-control" rows="6" cols="10" id="enter"></textarea>
+ 
+ <h3 style="display: inline-block; position:relative; top: 10px;"> Translate...</h3>
+ <button onclick="toLatin();" style="background-color: #ff66b3; border: none;" type="button" class="btn btn-primary btn-lg translateButton">To Pig-Latin</button>
+ <button onclick="toText();" style="background-color: #ff66b3; border: none;" type="button" class="btn btn-primary btn-lg translateButton">From Pig-Latin</button>
+ <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
-    </body>
+ <!-- Include all compiled plugins (below), or include individual files as needed -->
 
+</body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="jquery-1.12.2.min.js"></script>
-<script>
+
+<script type="text/javascript">
 
 function exists(test){
   var alphaNum = 'abcdefghijklmnopqrstuvwxyz1234567890'.split('');
@@ -55,7 +92,7 @@ function toLatin() {
     for(i = 0; i < words.length; i++){
         str += words[i] + " ";
     }
-    document.getElementById("exit").value = str;
+    document.getElementById("enter").value = str;
 }
 
 function toText(){
@@ -77,7 +114,7 @@ function toText(){
     for(i = 0; i < words.length; i++){
         str += words[i] + " ";
     }
-    document.getElementById("exit").value = str;
+    document.getElementById("enter").value = str;
 }
 
 function runMe(){
